--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@ionic-native/splash-screen": "3.12.1",
         "@ionic-native/status-bar": "3.12.1",
         "@ionic/storage": "2.0.1",
+        "@types/sprintf": "^0.1.0",
         "cordova-android": "^6.2.3",
         "cordova-plugin-compat": "^1.1.0",
         "cordova-plugin-console": "^1.0.5",
@@ -43,6 +44,7 @@
         "ionic-plugin-keyboard": "^2.2.1",
         "ionicons": "3.0.0",
         "rxjs": "5.4.0",
+        "sprintf-js": "^1.1.1",
         "sw-toolbox": "3.6.0",
         "zone.js": "0.8.12"
     },
