--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
         "ionic:serve": "ionic-app-scripts serve"
     },
     "dependencies": {
-        "@angular/common": "4.1.3",
-        "@angular/compiler": "4.1.3",
-        "@angular/compiler-cli": "4.1.3",
-        "@angular/core": "4.1.3",
-        "@angular/forms": "4.1.3",
-        "@angular/http": "4.1.3",
-        "@angular/platform-browser": "4.1.3",
-        "@angular/platform-browser-dynamic": "4.1.3",
+        "@angular/common": "4.4.3",
+        "@angular/compiler": "4.4.3",
+        "@angular/compiler-cli": "4.4.3",
+        "@angular/core": "4.4.3",
+        "@angular/forms": "4.4.3",
+        "@angular/http": "4.4.3",
+        "@angular/platform-browser": "4.4.3",
+        "@angular/platform-browser-dynamic": "4.4.3",
+        "@angular/platform-server": "4.4.3",
         "@ionic-native/core": "3.12.1",
         "@ionic-native/file": "^4.2.1",
         "@ionic-native/file-transfer": "^4.2.1",
@@ -40,16 +41,17 @@
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-statusbar": "^2.2.2",
         "cordova-plugin-whitelist": "^1.3.1",
-        "ionic-angular": "3.6.0",
+        "ionic-angular": "3.7.1",
         "ionic-plugin-keyboard": "^2.2.1",
         "ionicons": "3.0.0",
-        "rxjs": "5.4.0",
+        "rxjs": "5.4.3",
         "sprintf-js": "^1.1.1",
         "sw-toolbox": "3.6.0",
-        "zone.js": "0.8.12"
+        "zone.js": "0.8.18"
     },
     "devDependencies": {
-        "@ionic/app-scripts": "2.1.4",
+        "@angular/tsc-wrapped": "^4.4.4",
+        "@ionic/app-scripts": "3.0.0",
         "typescript": "2.3.4"
     },
     "description": "An Ionic project",
