--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@ionic-native/geolocation": "^4.2.1",
     "@ionic-native/globalization": "^4.3.1",
     "@ionic-native/media": "^4.2.1",
+    "@ionic-native/media-capture": "^4.3.1",
     "@ionic-native/splash-screen": "3.12.1",
     "@ionic-native/status-bar": "3.12.1",
     "@ionic/storage": "2.0.1",
@@ -43,6 +44,7 @@
     "cordova-plugin-geolocation": "^2.4.3",
     "cordova-plugin-globalization": "^1.0.7",
     "cordova-plugin-media": "^3.0.1",
+    "cordova-plugin-media-capture": "^1.4.3",
     "cordova-plugin-splashscreen": "^4.0.3",
     "cordova-plugin-statusbar": "^2.2.2",
     "cordova-plugin-whitelist": "^1.3.1",
@@ -72,7 +74,8 @@
       "cordova-plugin-file-transfer": {},
       "cordova-plugin-file": {},
       "cordova-plugin-media": {},
-      "cordova-plugin-globalization": {}
+      "cordova-plugin-globalization": {},
+      "cordova-plugin-media-capture": {}
     },
     "platforms": [
       "android"
