--- a/package.json
+++ b/package.json
@@ -22,19 +22,18 @@
     "@angular/platform-browser": "4.4.3",
     "@angular/platform-browser-dynamic": "4.4.3",
     "@angular/platform-server": "4.4.3",
-    "@ionic-native/core": "3.12.1",
+    "@ionic-native/core": "4.3.0",
     "@ionic-native/file": "^4.2.1",
     "@ionic-native/file-transfer": "^4.2.1",
     "@ionic-native/geolocation": "^4.2.1",
     "@ionic-native/globalization": "^4.3.1",
     "@ionic-native/media": "^4.2.1",
-    "@ionic-native/media-capture": "^4.3.1",
-    "@ionic-native/splash-screen": "3.12.1",
-    "@ionic-native/status-bar": "3.12.1",
+    "@ionic-native/speech-recognition": "^4.3.1",
+    "@ionic-native/splash-screen": "4.3.0",
+    "@ionic-native/status-bar": "4.3.0",
     "@ionic/storage": "2.0.1",
     "@ngx-translate/core": "^8.0.0",
     "@ngx-translate/http-loader": "^2.0.0",
-    "@types/sprintf": "^0.1.0",
     "cordova-android": "^6.2.3",
     "cordova-plugin-compat": "^1.1.0",
     "cordova-plugin-console": "^1.0.5",
@@ -44,7 +43,7 @@
     "cordova-plugin-geolocation": "^2.4.3",
     "cordova-plugin-globalization": "^1.0.7",
     "cordova-plugin-media": "^3.0.1",
-    "cordova-plugin-media-capture": "^1.4.3",
+    "cordova-plugin-speechrecognition": "^1.1.2",
     "cordova-plugin-splashscreen": "^4.0.3",
     "cordova-plugin-statusbar": "^2.2.2",
     "cordova-plugin-whitelist": "^1.3.1",
@@ -54,7 +53,8 @@
     "rxjs": "5.4.3",
     "sprintf-js": "^1.1.1",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.18"
+    "zone.js": "0.8.18",
+    "cordova-plugin-media-capture": "^1.4.3"
   },
   "devDependencies": {
     "@angular/tsc-wrapped": "^4.4.4",
@@ -75,6 +75,7 @@
       "cordova-plugin-file": {},
       "cordova-plugin-media": {},
       "cordova-plugin-globalization": {},
+      "cordova-plugin-speechrecognition": {},
       "cordova-plugin-media-capture": {}
     },
     "platforms": [
